No longer blurry, various bugfixes

--- a/css/main.css
+++ b/css/main.css
@@ -27,8 +27,6 @@ body {
 #wordcloud {
     display: inline;
     margin: 0 auto;
-    width: 800px;
-    height: 600px;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
